@@ -334,7 +334,8 @@ xfrd_send_expy_all_zones()
 void
 xfrd_reopen_logfile()
 {
-	log_reopen(xfrd->nsd->log_filename, 0);
+	if (xfrd->nsd->file_rotation_ok)
+		log_reopen(xfrd->nsd->log_filename, 0);
 }
 
 static void
